force-app/main/default/objects/LateRushSettings__mdt/LateRushSettings__mdt.object-meta.xml
<CustomObject>
    <label>Late &amp; Rush Fee Settings</label>
    <pluralLabel>LateRushSettings</pluralLabel>
</CustomObject>