force-app/main/default/objects/LateRushSettings__mdt/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due Date</fullName>
                <default>true</default>
                <label>Due Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>