force-app/main/default/objects/LateRushSettings__mdt/fields/Late_Fee_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Maximum__c</fullName>
    <label>Late Fee (Maximum)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>