force-app/main/default/objects/LateRushSettings__mdt/fields/Late_Fee_per_Asset__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_per_Asset__c</fullName>
    <label>Late Fee per Asset</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>