force-app/main/default/objects/LateRushSettings__mdt/fields/Rush_Fee_per_Asset__c.field-meta.xml
<CustomField>
    <fullName>Rush_Fee_per_Asset__c</fullName>
    <label>Rush Fee per Asset</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>