force-app/main/default/objects/LateRushSettings__mdt/fields/RushFee_Days_End__c.field-meta.xml
<CustomField>
    <fullName>RushFee_Days_End__c</fullName>
    <label>Rush Fee Days (End)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>