force-app/main/default/objects/LateRushSettings__mdt/fields/RushFee_Days_Start__c.field-meta.xml
<CustomField>
    <fullName>RushFee_Days_Start__c</fullName>
    <label>RushFee Days (Start)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>